# mlx90640-lib-python

./: .gitignore  CLAUDE.md  Makefile  README.md  apt_prerequisites.sh  pyproject.toml  requirements.txt  run_ascii.sh  setup.py
examples/: ascii_display.py  configure_params.py
examples/src/: mlx_test.cpp  test.cpp  video.cpp
mlx90640/: __init__.py  camera.h
python-wrapper/: MANIFEST.in  Makefile  README.md  setup.py  test_fps_stability.py
python-wrapper/examples/: ascii_display.py  configure_params.py  simple_capture.py
python-wrapper/mlx90640/: camera.cpp
