[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.6"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx90640"
version = "1.0.0"
description = "Python wrapper for MLX90640 thermal camera (chess mode only)"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "Apache-2.0"}
authors = [
    {name = "MLX90640 Python Wrapper"}
]
dependencies = ["pybind11>=2.6", "numpy>=1.19.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]

[project.urls]
Homepage = "https://github.com/dude84/mlx90640-lib-python"
Repository = "https://github.com/dude84/mlx90640-lib-python"

[tool.setuptools]
packages = ["mlx90640"]
package-data = {"mlx90640" = ["*.cpp", "*.h", "lib/*.cpp", "lib/*.h"]}
